Use assert instead of JUnit assert methods.